testdata/bad/bad-fail-5.ct
# Command fails, but with the wrong exit code.

$ cd foo --> FAIL 3

# We shouldn't see this output.
$ echo should not appear

